# sentinel

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  requirements_no_hashes.txt
configs/: deployment_config.yaml  model_config.yaml  training_config.yaml
scripts/: 01_data_setup.ipynb  02_data_preprocessing.ipynb  03_pointnet_training.ipynb  04_model_evaluation.ipynb  05_adverse_weather_simulation.ipynb  06_deployment_preparation.ipynb  build_cpp_pcl.sh  download_kitti.sh  export_model_to_cpp.py  set-up_gcs_access.ipynb  setup_gcs.sh
src/cpp/: main_pcl.cpp
src/cpp/include/: geometric_refinement_pcl.h
src/cpp/src/: geometric_refinement_pcl.cpp  main_pcl.cpp
src/python/config/: training_config.py
src/python/datasets/: data_augmentation.py  semantic_kitti.py
src/python/models/: pointnet2.py  pointnet2_utils.py
src/python/utils/: gcs_data_loader.py  metrics.py  visualization.py
